k8s/deployment-tasky.yml
# Main tasky-app deployment
# need to add secret for MONGODB_URI string
# create secret using:
# kubectl create secret generic tasky-secret --from-literal=MONGODB_URI='mongodb://<USER>:<PASSWORD>@<HOST>:<PORT>' -n tasky

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-app
  namespace: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tasky-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tasky-app
    spec:
      containers:
        - name: tasky-app
          image: crzykidd/tasky-app:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
# setup service details
apiVersion: v1
kind: Service
metadata:
  namespace: tasky
  name: tasky-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
  selector:
    app.kubernetes.io/name: tasky-app

---
# Create Loadbalancer IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: tasky
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
spec:
  controller: eks.amazonaws.com/alb

---
# Create Loadbalancer for tasky
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: tasky
  name: tasky-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasky-service
                port:
                  number: 8080
